<resources xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">LS4000</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_query">QueryActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_system">SystemActivity</string>
    <string name="title_activity_conmana">ConmanaActivity</string>
    <string name="title_activity_engineer">EngineerActivity</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="title_activity_print">PrintActivity</string>
    <string name="title_activity_wifi">WIFIActivity</string>
    <string name="title_activity_blue_tooth">BlueToothActivity</string>
    <string name="title_activity_Coeff_icent">CoefficentActivity</string>
    <string name="title_activity_gps">GPSActivity</string>
    <string name="title_activity_time">TimeActivity</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="title_activity_sim">SIMActivity</string>
    <string name="title_activity_ageing">AgeingActivity</string>
    <string name="title_activity_elec">ElecActivity</string>
    <string name="title_activity_sample">SampleActivity</string>
    <string name="title_activity_promana">PromanaActivity</string>
    <string name="title_activity_result">ResultActivity</string>
    <string name="title_activity_language">LanguageActivity</string>
    <string name="title_activity_oper">OperActivity</string>
    <string name="title_activity_instru">InstruActivity</string>
    <string name="title_activity_staff">StaffActivity</string>
    <string name="title_errorCode">错误码说明</string>
    <string name="errorCode">错误码说明</string>
    <string name="errorCode_dec">错误码说明以及对应的解决方法</string>
    <string name="defaultInteval">2000</string>
    <string name="defaultHttpTimeout">30000</string>
    <string name="battery_saving">低功耗模式</string>
    <string name="device_sensors">仅设备模式</string>
    <string name="hight_accuracy">高精度模式</string>
    <string name="interval">定位周期(ms)</string>
    <string name="httpTimeout">网络超时(ms)</string>
    <string name="location_once">单次定位</string>
    <string name="needAddress">逆地理编码</string>
    <string name="cacheAble">开启缓存</string>
    <string name="onceLastest">提高首次定位精度</string>
    <string name="gpsFirst">GPS优先</string>
    <string name="useSensor">使用传感器</string>
    <string name="wifiScan">开启wifi扫描</string>
    <string name="geoLanguage">逆地理语言</string>
    <string name="page">0123456789qwertyuiopasdfghjklzxcvbnmQWERTYUIOPLKJHGFDSAZXCVBNM</string>
    <string name="alarmInterval">唤醒周期(s)</string>
    <string name="startLocation">开始定位</string>
    <string name="stopLocation">停止定位</string>
    <string name="string1">恢复出厂设置后，设备中的所有数据都会清空，确定要恢复出厂设置吗？</string>
    <string name="string2">请选择项目！</string>
    <string name="string3">男</string>
    <string name="string4">女</string>
    <string name="string5">项目已过期，请重新添加项目！</string>
    <string name="string6">该项目不存在，请先添加项目！</string>
    <string name="string7">全血</string>
    <string name="string8">血清</string>
    <string name="string9">血浆</string>
    <string name="string10">尿液</string>
    <string name="string11">其他</string>
    <string name="string12">开始老化</string>
    <string name="string13">停止老化</string>
    <string name="string14">本机未找到蓝牙功能</string>
    <string name="string15">用户拒绝了权限</string>
    <string name="string16">正在连接蓝牙打印机，请稍候！</string>
    <string name="string17">蓝牙打印机连接成功！</string>
    <string name="string18">蓝牙打印机连接失败！</string>
    <string name="string19">请先打开蓝牙，再连接蓝牙打印机！</string>
    <string name="string20">允许本地蓝牙被附近的其它蓝牙设备发现</string>
    <string name="string21">不允许蓝牙被附近的其它蓝牙设备发现</string>
    <string name="string22">正在搜索蓝牙设备</string>
    <string name="string23">取消搜索蓝牙设备</string>
    <string name="string24">蓝牙设备搜索完成</string>
    <string name="string25">正在配对</string>
    <string name="string26">完成配对</string>
    <string name="string27">取消配对</string>
    <string name="string28">配对异常：</string>
    <string name="string29">连接成功</string>
    <string name="string30">该卡条不是质控卡，请重新扫描</string>
    <string name="string31">请插入试剂卡！</string>
    <string name="string32">确定要删除选中的项目信息吗？</string>
    <string name="string33">确定要清空所有项目信息吗？</string>
    <string name="string34">请插入试剂卡！</string>
    <string name="string35">正常</string>
    <string name="string36">异常</string>
    <string name="string37">加载中，请稍候...</string>
    <string name="string38">版本号：1.1.0</string>
    <string name="string39">©Copyright 2018 南京岚煜生物科技有限公司</string>
    <string name="string40">当前的温度是</string>
    <string name="string41">通道空闲</string>
    <string name="string42">正在温育</string>
    <string name="string43">正在检测</string>
    <string name="string44">点击查看</string>
    <string name="string45">当前环境温度为</string>
    <string name="string46">℃，高于检测温度范围</string>
    <string name="string47">℃，低于检测温度范围</string>
    <string name="string48">开始定位</string>
    <string name="string49">正在定位...</string>
    <string name="string50">停止定位</string>
    <string name="string51">定位停止</string>
    <string name="string52">定位成功</string>
    <string name="string53">经    度    : </string>
    <string name="string54">纬    度    : </string>
    <string name="string55">定位时间: </string>
    <string name="string56">定位失败</string>
    <string name="string57">错误信息:</string>
    <string name="string58">错误描述:</string>
    <string name="string59">***定位质量报告***</string>
    <string name="string60">* WIFI开关：</string>
    <string name="string61">* GPS状态：</string>
    <string name="string62">* GPS星数：</string>
    <string name="string63">* 网络类型：</string>
    <string name="string64">* 网络耗时：</string>
    <string name="string65">回调时间: </string>
    <string name="string66">GPS状态正常</string>
    <string name="string67">手机中没有GPS Provider，无法进行GPS定位</string>
    <string name="string68">GPS关闭，建议开启GPS，提高定位质量</string>
    <string name="string69">选择的定位模式中不包含GPS定位，建议选择包含GPS定位的模式，提高定位质量</string>
    <string name="string70">没有GPS定位权限，建议开启gps定位权限</string>
    <string name="string71">获取定位数据</string>
    <string name="string72">手持式荧光免疫分析仪报告单</string>
    <string name="string73">医院名称：</string>
    <string name="string74">科室名称：</string>
    <string name="string75">医生名称：</string>
    <string name="string76">姓名：</string>
    <string name="string77">样本号：</string>
    <string name="string78">项目：</string>
    <string name="string79">结果：</string>
    <string name="string80">参考值：</string>
    <string name="string81">时间：</string>
    <string name="string82">设备的蓝牙未打开，请到蓝牙设置界面打开蓝牙并连接打印机！</string>
    <string name="string83">请先添加检测样本！</string>
    <string name="string84">全选</string>
    <string name="string85">反选</string>
    <string name="string86">样本检测中，无法修改样本信息！</string>
    <string name="string87">时间修改成功！</string>
    <string name="string88">请输入Wifi密码</string>
    <string name="string89">确定</string>
    <string name="string90">取消</string>
    <string name="string91">连接中...</string>
    <string name="string92">设备连接成功</string>
    <string name="string93">发送消息成功:</string>
    <string name="string94">发送消息失败:</string>
    <string name="string95">收到消息:</string>
    <string name="string96">连接已断开</string>
    <string name="string97">已连接到网络:</string>
    <string name="string98">正在验证身份信息...</string>
    <string name="string99">正在获取IP地址...</string>
    <string name="string100">连接失败</string>
    <string name="string101">未绑定</string>
    <string name="string102">绑定中</string>
    <string name="string103">配对成功</string>
    <string name="string104">已连接</string>
    <string name="string105">关于仪器</string>
    <string name="string106">型号</string>
    <string name="string107">硬件版本</string>
    <string name="string108">软件版本</string>
    <string name="string109">序列号</string>
    <string name="string110">恢复出厂设置</string>
    <string name="string111">样本添加</string>
    <string name="string112">可以通过扫码获取用户信息及样本信息</string>
    <string name="string113">保存</string>
    <string name="string114">保存并继续添加</string>
    <string name="string115">身份证号</string>
    <string name="string116">姓名</string>
    <string name="string117">年龄</string>
    <string name="string118">性别</string>
    <string name="string119">检测人</string>
    <string name="string120">样本号</string>
    <string name="string121">检测项目</string>
    <string name="string122">样本类型</string>
    <string name="string123">老化测试</string>
    <string name="string124">蓝牙设置</string>
    <string name="string125">蓝牙</string>
    <string name="string126">蓝牙打印机</string>
    <string name="string127">可用设备</string>
    <string name="string128">搜索设备</string>
    <string name="string129">仪器质控</string>
    <string name="string130">开始测定</string>
    <string name="string131">删除</string>
    <string name="string132">清空</string>
    <string name="string133">打印</string>
    <string name="string134">序号</string>
    <string name="string135">质控时间</string>
    <string name="string136">质控结果</string>
    <string name="string137">工程师调试</string>
    <string name="string138">试剂质控功能</string>
    <string name="string139">记录操作</string>
    <string name="string140">显示SIM卡</string>
    <string name="string141">项目</string>
    <string name="string142">结果</string>
    <string name="string143">打印设置</string>
    <string name="string144">自动打印</string>
    <string name="string145">打印内容设置</string>
    <string name="string146">医院名称</string>
    <string name="string147">科室名称</string>
    <string name="string148">医生名称</string>
    <string name="string149">参考值</string>
    <string name="string150">项目管理</string>
    <string name="string151">筛选</string>
    <string name="string152">批次号</string>
    <string name="string153">生产日期</string>
    <string name="string154">保质期(月)</string>
    <string name="string155">扫码添加</string>
    <string name="string156">记录查询</string>
    <string name="string157">上传</string>
    <string name="string158">测试起始时间</string>
    <string name="string159">测试结束时间</string>
    <string name="string160">查询</string>
    <string name="string161">检测结果</string>
    <string name="string162">岁</string>
    <string name="string163">样本类型：</string>
    <string name="string164">检测项目：</string>
    <string name="string165">浓度1：</string>
    <string name="string166">单位：</string>
    <string name="string167">检测人：</string>
    <string name="string168">检测时间：</string>
    <string name="string169">估计峰位置：</string>
    <string name="string170">真实峰位置：</string>
    <string name="string171">系统设置</string>
    <string name="string172">用户信息</string>
    <string name="string173">语言</string>
    <string name="string174">日期</string>
    <string name="string175">试剂质控</string>
    <string name="string177">SIM卡管理</string>
    <string name="string176">是否显示SIM卡</string>
    <string name="string178">检测</string>
    <string name="string179">时间设置</string>
    <string name="string180">样本修改</string>
    <string name="string181">用户信息设置</string>
    <string name="string182">输入医院名称</string>
    <string name="string183">输入科室名称</string>
    <string name="string184">输入医生名称</string>
    <string name="string185">WIFI设置</string>
    <string name="string186">选取网络</string>
    <string name="string187">温度传感器：</string>
    <string name="string188">扫码模块：</string>
    <string name="string189">光电开关：</string>
    <string name="string190">采集模块：</string>
    <string name="string191">运动模块：</string>
    <string name="string192">质控结果：</string>
    <string name="string193">质控时间：</string>
    <string name="string194">输入密码</string>
    <string name="string195">密码错误，请重新输入</string>
    <string name="string196">提示</string>
    <string name="string197">选择检测项目</string>
    <string name="string198">忽略</string>
    <string name="string199">关机</string>
    <string name="string200">选择样本类型</string>
    <string name="string201">检测</string>
    <string name="string202">查询</string>
    <string name="string203">设置</string>
    <string name="string204">语言切换成功！</string>
    <string name="string205">GPS设置</string>
</resources>