<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.chen.ls4000.activity.OperActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@mipmap/bg_headofpage"
        android:id="@+id/id_oper_title">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string139"
            style="@style/titlefont"
            android:layout_centerInParent="true"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_back"
            android:id="@+id/id_oper_back"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:orientation="horizontal"
        android:layout_below="@id/id_oper_title"
        android:id="@+id/id_oper_lvhead"
        android:background="#fff">
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/radiobtn_style"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:id="@+id/id_oper_allchoose"/>
        <TextView
            android:layout_width="36dp"
            android:layout_height="wrap_content"
            android:text="ID"
            android:textAlignment="center"
            style="@style/queryheadfont"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center"
            android:visibility="gone"/>
        <TextView
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="@string/string120"
            android:textAlignment="center"
            style="@style/queryheadfont"
            android:layout_marginLeft="4dp"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="97dp"
            android:layout_height="wrap_content"
            android:text="@string/string116"
            android:textAlignment="center"
            style="@style/queryheadfont"
            android:layout_marginLeft="4dp"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="103dp"
            android:layout_height="wrap_content"
            android:text="@string/string141"
            android:textAlignment="center"
            style="@style/queryheadfont"
            android:layout_marginLeft="4dp"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="84dp"
            android:layout_height="wrap_content"
            android:text="@string/string174"
            android:textAlignment="center"
            style="@style/queryheadfont"
            android:layout_marginLeft="4dp"
            android:layout_gravity="center"
            android:layout_marginRight="20dp"/>
    </LinearLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_below="@id/id_oper_lvhead"
        android:background="#d8ddea"
        android:id="@+id/id_oper_line1"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="76dp"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="#fff"
        android:elevation="10dp"
        android:id="@+id/id_oper_layout4"
        >
        <Button
            android:layout_width="120dp"
            android:layout_height="76dp"
            android:text="@string/string84"
            android:id="@+id/id_oper_choose"
            android:drawableTop="@mipmap/ic_all"
            android:background="#fff"
            android:textAllCaps="false"
            style="@style/queryheadfont"
            android:paddingTop="16.6dp"/>
        <Button
            android:layout_width="120dp"
            android:layout_height="76dp"
            android:text="@string/string131"
            android:id="@+id/id_oper_delete"
            android:textAllCaps="false"
            android:drawableTop="@mipmap/ic_delete"
            android:background="#fff"
            style="@style/queryheadfont"
            android:paddingTop="16.6dp"/>
        <Button
            android:layout_width="120dp"
            android:layout_height="76dp"
            android:text="@string/string157"
            android:textAllCaps="false"
            android:id="@+id/id_oper_upload"
            android:drawableTop="@mipmap/ic_upload"
            android:background="#fff"
            style="@style/queryheadfont"
            android:paddingTop="16.6dp"/>
        <Button
            android:layout_width="120dp"
            android:layout_height="76dp"
            android:text="@string/string133"
            android:id="@+id/id_oper_print"
            android:textAllCaps="false"
            android:drawableTop="@mipmap/ic_print"
            android:background="#fff"
            style="@style/queryheadfont"
            android:paddingTop="16.6dp"/>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/id_oper_line1"
        android:background="#fff"
        android:layout_above="@id/id_oper_layout4"
        >

        <com.handmark.pulltorefresh.library.PullToRefreshListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="#d8ddea"
            android:dividerHeight="1dp"
            android:id="@+id/id_oper_lv"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true">
        </com.handmark.pulltorefresh.library.PullToRefreshListView>

    </RelativeLayout>




</RelativeLayout>
