<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.chen.ls4000.activity.PromanaActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/id_promana_head"
        android:background="@mipmap/bg_headofpage"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/string150"
            android:textColor="#fff"
            android:textSize="28sp"/>
        <!--<TextView 筛选-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/string151"-->
            <!--android:layout_alignParentRight="true"-->
            <!--android:textSize="22.7sp"-->
            <!--android:textColor="#fff"-->
            <!--android:layout_centerVertical="true"-->
            <!--android:layout_marginRight="20dp"-->
            <!--android:id="@+id/id_promana_screen"/>-->
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_back"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:id="@+id/id_promana_back"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_below="@id/id_promana_head"
        android:id="@+id/id_promana_lvhead"
        android:background="#fff"
        android:orientation="horizontal">
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/gender_checkbox_style"
            android:layout_marginLeft="20dp"
            android:layout_gravity="center"
            android:id="@+id/id_promana_allchoose"/>
        <TextView
            android:layout_width="94dp"
            android:layout_height="wrap_content"
            android:text="@string/string141"
            android:textSize="18.7sp"
            android:textColor="#242a33"
            android:textAlignment="center"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/string152"
            android:textSize="18.7sp"
            android:textColor="#242a33"
            android:textAlignment="center"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:text="@string/string153"
            android:textSize="18.7sp"
            android:textColor="#242a33"
            android:textAlignment="center"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/string154"
            android:textSize="18.7sp"
            android:textColor="#242a33"
            android:textAlignment="center"
            android:layout_gravity="center"/>
    </LinearLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0.7dp"
        android:background="#d8ddea"
        android:layout_below="@id/id_promana_lvhead"/>
    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/id_promana_lvhead"
        android:id="@+id/id_promana_lv"
        android:dividerHeight="1dp"
        android:layout_above="@+id/id_promana_layoutla"
        android:divider="#d8ddea"/>


    <LinearLayout
        android:id="@+id/id_promana_layoutla"
        android:layout_width="match_parent"
        android:layout_height="76dp"
        android:background="#fff"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">
        <Button
            android:layout_width="0dp"
            android:layout_height="76dp"
            android:background="#fff"
            android:layout_weight="1"
            android:drawableTop="@mipmap/ic_scan"
            android:text="@string/string155"
            android:textColor="#73a3f0"
            android:textSize="16sp"
            android:textAllCaps="false"
            android:layout_gravity="center"
            android:id="@+id/id_promana_scan"
            android:paddingTop="16.6dp"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="76dp"
            android:layout_weight="1"
            android:background="#fff"
            android:drawableTop="@mipmap/ic_delete"
            android:text="@string/string131"
            android:textColor="#73a3f0"
            android:textSize="16sp"
            android:textAllCaps="false"
            android:layout_gravity="center"
            android:id="@+id/id_promana_delete"
            android:paddingTop="16.6dp"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="76dp"
            android:layout_weight="1"
            android:background="#fff"
            android:drawableTop="@mipmap/ic_clear"
            android:text="@string/string132"
            android:textColor="#73a3f0"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:layout_gravity="center"
            android:id="@+id/id_promana_clear"
            android:paddingTop="16.6dp"/>
    </LinearLayout>
</RelativeLayout>
