<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#000"
        android:alpha="0.6">
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="670dp"
        android:layout_centerInParent="true">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="400dp"
            android:orientation="vertical"
            android:layout_marginLeft="7dp"
            android:layout_marginRight="7dp"
            android:id="@+id/id_con_dialog_dialog"
            android:background="@mipmap/bg_testingresult_little">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="52dp"
                android:layout_gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/string136"
                    style="@style/contitlefont"
                    android:textAlignment="center" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="40dp"
                android:layout_marginLeft="40dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="EEPROM："
                    style="@style/coninfofont"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="正常"
                    android:id="@+id/id_con_dialog_eeprom"
                    style="@style/lvitemfont2"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/string187"
                    style="@style/coninfofont"
                    android:layout_marginLeft="108dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="正常"
                    android:id="@+id/id_con_dialog_tem"
                    style="@style/lvitemfont2"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="40dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/string188"
                    style="@style/coninfofont"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="正常"
                    android:id="@+id/id_con_dialog_scan"
                    style="@style/lvitemfont2"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/string189"
                    style="@style/coninfofont"
                    android:layout_marginLeft="108dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="正常"
                    android:id="@+id/id_con_dialog_light"
                    style="@style/lvitemfont2"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="40dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/string190"
                    style="@style/coninfofont"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="正常"
                    android:id="@+id/id_con_dialog_oper"
                    style="@style/lvitemfont2"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/string191"
                    style="@style/coninfofont"
                    android:layout_marginLeft="108dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="正常"
                    android:id="@+id/id_con_dialog_tran"
                    style="@style/lvitemfont2"/>
            </LinearLayout>
            <ImageView
                android:layout_width="349.3dp"
                android:layout_height="0.7dp"
                android:background="@drawable/dotted_line"
                android:layout_marginTop="26.7dp"
                android:layout_gravity="center"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="26.7dp"
                android:layout_marginLeft="40dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/string192"
                    style="@style/coninfofont"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:id="@+id/id_con_dialog_con"
                    style="@style/lvitemfont2"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="40dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/string193"
                    style="@style/coninfofont"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="2017-06-29"
                    android:id="@+id/id_con_dialog_time"
                    style="@style/lvitemfont2"/>
            </LinearLayout>


        </LinearLayout>

        <Button
            android:id="@+id/id_con_dialog_cancel"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="53.3dp"
            android:background="@mipmap/btn_close_line"
            android:layout_below="@id/id_con_dialog_dialog"/>
    </RelativeLayout>


</RelativeLayout>
